# chatExcel-mcp

./: .gitignore  .pre-commit-config.yaml  =1.0.0  =1.10.0  =3.1.2  =5.0.0  =5.17.0  CACHE_OPTIMIZATION_README.md  CHANGELOG.md  ENHANCED_USAGE_GUIDE.md  EXCEL_FEATURES.md  LICENSE  Makefile  PANDAS_FIX_GUIDE.md  README.md  cache_config.json  cache_manager.py  check_dependencies.py  check_env.py  check_fastmcp_version.py  check_mcp_env.py  check_tool_registration.py  column_checker.py  comprehensive_data_verification.py  comprehensive_environment_check.py  comprehensive_environment_check_report.json  comprehensive_mcp_test.py  comprehensive_mcp_tools_check_report.json  comprehensive_mcp_tools_checker.py  comprehensive_mcp_verification.py  comprehensive_module_analysis.py  comprehensive_security_optimizer.py  comprehensive_tools_analysis.py  comprehensive_tools_analysis_report.json  comprehensive_tools_test_report.json  config.py  config_manager.py  create_test_excel.py  data_quality_tools.py  data_verification.py  (+59 more)
.encoding_cache/: encoding_cache.json
.github/workflows/: ci.yml
.trae/rules/: project_rules.md
backups/structure_optimization/backup_20250614_130900/: README.md  requirements.txt
backups/structure_optimization/backup_20250614_130900/config/: system.json
backups/structure_optimization/backup_20250614_130900/scripts/: crontab_example.txt  deploy.py  enhanced_monitor.py  maintenance.sh  security_enhancer.py  start_server.py  structure_optimizer.py  update_dependencies.sh
charts/: chart_1748338993.html  chart_1748338999.html  chart_1748339004.html  chart_1748339010.html  chart_1748339018.html  chart_1748423035.html  chart_1748423042.html  chart_1748423053.html  chart_1748423067.html  chart_1748423081.html  chart_1748423094.html  chart_1748423105.html  chart_1748423118.html  chart_1748425340.html  chart_1748425351.html  chart_1748425584.html  chart_1748426064.html  chart_1748426109.html  chart_1748426168.html  chart_1748426254.html  chart_1748426285.html  chart_1748426320.html  chart_1748426356.html  chart_1748426444.html  chart_1748426471.html  chart_1748426509.html  chart_1748426560.html  chart_1748426778.html  chart_1749123762.html  chart_1749123786.html  chart_1749124198.html  chart_1749125867.html  chart_1749126239.html  chart_1749126444.html  chart_1750067085.html
config/: backup_config_20250620_171443.json  backup_config_20250620_171537.json  backup_config_20250620_173210.json  backup_config_20250620_173214.json  runtime.yaml  security.json
core/: __init__.py  config.py  exceptions.py  types.py
docs/: code_review_checklist.md  exception_handling_standards.md
excel-service/: go.mod  go.sum  main.go
monitoring/: __init__.py  alert_manager.py  health_monitor.py  performance_monitor.py  system_monitor.py
record/: CHANGELOG.md  ENHANCEMENT_RECORD.md  ENVIRONMENT_COMPATIBILITY_REPORT.md  PACKAGE_MANAGEMENT_ENHANCEMENT_GUIDE.md  QUICK_START.md  clean_excel_data_fix_record.md  cleanup_record.md  dependency_analysis_report.md  encoding_fix_record.md  enhanced_multiheader_upgrade_record.md  import_unrestricted_record.md  mcp_run_excel_code_verification_report.md  open_function_security_fix_record.md  quick_enhancement_report_20250614_130900.md  run_excel_code_fix_record.md  run_excel_code_fixes_record.md  run_excel_code_multiindex_fix_record.md  security_enhancement_plan.md  security_fixes_completed.md  security_optimization_record.md  security_relaxation_record.md  security_scan_report.md  string_escape_optimization_record.md  structure_optimization_report.md  system_comprehensive_review.md  tabulate_integration_record.md  tabulate_optimization_summary.md  test_files_migration_report.md  type_annotation_fix_record.md  validate_formula_fix_record.md
reports/quick/: quick_enhancement_report_20250614_130900.json
scripts/: automation_suite.py  cache_maintenance.sh  code_quality_check.sh  code_quality_enhanced.py  config_optimizer.py  crontab_example.txt  dependency_audit.py  health_check.py  quick_enhancement.py  security_enhancer.py  setup_maintenance_cron.sh
security/: code_executor.py  secure_code_executor.py
service_management/: config_manager.py  dependency_manager.py  health_manager.py
services/: __init__.py  code_executor.py  excel_service.py  file_service.py
test/: comprehensive_mcp_test.py  comprehensive_tools_test.py  create_test_excel.py  demo_excel_features.py  diagnose_mcp_setup.py  final_integration_check.py  matadata_test.py  mcp_config_absolute.json  mcp_test_case.py  quick_test.py  simple_fix_test.py  simple_formulas_test.py  simple_test.py  test_chart.json  test_chatexcel_service.py  test_complete_functionality.py  test_comprehensive_multiheader.py  test_enhanced_excel.py  test_enhanced_features.py  test_enhanced_multiheader.py  test_excel_complex_format.py  test_fixed_excel_tool.py  test_groupby_issue.py  test_header_detection.py  test_mcp_client.py  test_mcp_config.json  test_mcp_config.py  test_mcp_server.py  test_metadata_functions.py  test_multiheader_capability.py  test_multiheader_handling.py  test_numpy_functionality.py  test_numpy_mcp_integration.py  test_pandas_availability.py  test_pandas_import.py  test_pandas_nameerror.py  test_parameter_passing.py  test_row_count.py
test/tests/: test_server.py
utils/: __init__.py  cache.py  encoding_detector.py  error_handler.py  parameter_validator.py  security.py  string_escape_handler.py  validators.py
